--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,13 @@
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    {% include styles.html %}
+        {% include styles.html %}
 
-        {{ SEO }}
+          {{ SEO }}
 
-    {% include meta.html %}
+        {% include meta.html %}
+    </title>
 </head>
